--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 					<input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Ingrese Usuario...">
 				  </div>
 				  <div class="form-group">
-					<label for="exampleInputPassword1">Contraseña</label>
-					<input type="password" name="password "class="form-control" id="exampleInputPassword1" placeholder="Ingrese Contraseña...">
+					<label for="exampleInputPassword1">ContraseÃ±a</label>
+					<input type="password" name="password "class="form-control" id="exampleInputPassword1" placeholder="Ingrese ContraseÃ±a...">
 				  </div>				  
-				  <button type="button" class="btn btn-danger">Iniciar Sesión</button>
+				  <button type="button" class="btn btn-danger">Iniciar SesiÃ³n</button>
 				  
 				</form>
 				<p>__________________________________________</p>
-				<p>¿No tiene cuenta?</p>
+				<p>Â¿No tiene cuentaa?</p>
 				<button type="button" class="btn btn-info">Crear Usuario</button>
 			</div>
 		</div>
