--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="es">
     <head>
@@ -24,7 +24,7 @@
 				  
 				</form>
 				<p>__________________________________________</p>
-				<p>¿No tiene cuentaa?</p>
+				<p>¿No tiene cuenta?</p>
 				<button type="button" class="btn btn-info">Crear Usuario</button>
 			</div>
 		</div>
