Agregue Opcion adultos
me parece que faltaba la opcion de adultos

--- a/registro.html
+++ b/registro.html
@@ -39,7 +39,8 @@
 								  <option>Adolescentes 3</option>
 								  <option>Adolescentes 4</option>
 								  <option>Adolescentes 5</option>
-								  <option>Niños</option>								  
+								  <option>Niños</option>
+								<option>Adultos</option>
 								</select>
 						</div>
 					  </div>
