--- a/registro.html
+++ b/registro.html
@@ -41,6 +41,7 @@
 								  <option>Adolescentes 5</option>
 								  <option>Niños</option>
 								<option>Adultos</option>
+								<option>Gatos</option>
 								</select>
 						</div>
 					  </div>
