--- a/registro.html
+++ b/registro.html
@@ -39,8 +39,9 @@
 								  <option>Adolescentes 3</option>
 								  <option>Adolescentes 4</option>
 								  <option>Adolescentes 5</option>
-								  <option>Niños</option>
+								  <option>Niï¿½os</option>
 								<option>Adultos</option>
+								<option>Perro</option>
 								</select>
 						</div>
 					  </div>
@@ -73,15 +74,15 @@
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="password" class="col-sm-2 control-label">Contraseña:</label>
+						<label for="password" class="col-sm-2 control-label">Contraseï¿½a:</label>
 						<div class="col-sm-10">
-						  <input type="password" class="form-control" id="password" name="password" placeholder="ingrese contraseña...">
+						  <input type="password" class="form-control" id="password" name="password" placeholder="ingrese contraseï¿½a...">
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="usuario" class="col-sm-2 control-label">Repita la contraseña:</label>
+						<label for="usuario" class="col-sm-2 control-label">Repita la contraseï¿½a:</label>
 						<div class="col-sm-10">
-						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contraseña...">
+						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contraseï¿½a...">
 						</div>
 					  </div>
 					  
