--- a/registro.html
+++ b/registro.html
@@ -39,17 +39,8 @@
 								  <option>Adolescentes 3</option>
 								  <option>Adolescentes 4</option>
 								  <option>Adolescentes 5</option>
-<<<<<<< HEAD
-								  <option>Niï¿½os</option>
+								  <option>Niños</option>
 								<option>Adultos</option>
-<<<<<<< HEAD
-								<option>Perro</option>
-=======
-								<option>Gatos</option>
->>>>>>> origin/master
-=======
-								  <option>Niños</option>								  
->>>>>>> parent of 7db6c19... Agregue Opcion adultos
 								</select>
 						</div>
 					  </div>
@@ -82,15 +73,15 @@
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="password" class="col-sm-2 control-label">Contraseï¿½a:</label>
+						<label for="password" class="col-sm-2 control-label">Contraseña:</label>
 						<div class="col-sm-10">
 						  <input type="password" class="form-control" id="password" name="password" placeholder="ingrese contraseï¿½a...">
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="usuario" class="col-sm-2 control-label">Repita la contraseï¿½a:</label>
+						<label for="usuario" class="col-sm-2 control-label">Repita la contraseña:</label>
 						<div class="col-sm-10">
-						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contraseï¿½a...">
+						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contraseña...">
 						</div>
 					  </div>
 					  
