Un poco de diseño

--- a/panel.html
+++ b/panel.html
@@ -9,27 +9,37 @@
 	</head>
 
 	<body>
-		<header>
-			<img src="img/dalePlei_logo2.png"/>
-			<img src="img/store_logo1.png"/>
-			
-		</header>
+			<header>
+				<div class="row">
+					<div class="col-md-5 col-lg-5 col-sm-5">
+						<img  src="img/dalePlei_logo2.png"/>
+					</div>
+					<div class="col-md-1 col-lg-1 hidden-xs col-sm-1">
+						<div id="div70"></div>
+						<img src="img/store_logo1.png"/>
+					</div>
 
-		<nav>
-			<div class="btn-group" role="group" aria-label="...">
-			  <button type="button" class="btn btn-default">Comprar videos</button>
-			    <div class="btn-group" role="group">
-					    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					      Ayuda
-					      <span class="caret"></span>
-					    </button>
-					    <ul class="dropdown-menu">
-					      <li><a href="#">Dropdown link</a></li>
-					      <li><a href="#">Dropdown link</a></li>
-					    </ul>
-					  </div>
-			  <button type="button" class="btn btn-default">Contacto</button>
-			</div>
+				</div>				
+			</header>
+
+			<nav>
+				<div class="panel panel-default"> 
+
+					<div class="btn-group" role="group" aria-label="...">
+					  <button type="button" class="btn btn-default">Comprar videos</button>
+					    <div class="btn-group" role="group">
+							    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							      Ayuda
+							      <span class="caret"></span>
+							    </button>
+							    <ul class="dropdown-menu">
+							      <li><a href="#">Dropdown link</a></li>
+							      <li><a href="#">Dropdown link</a></li>
+							    </ul>
+							  </div>
+					  <button type="button" class="btn btn-default">Contacto</button>
+					</div>
+  				</div>
 
 		</nav>
 
