--- a/panel.html
+++ b/panel.html
@@ -9,42 +9,39 @@
 	</head>
 
 	<body>
-			<header>
-				<div class="row">
-					<div class="col-md-5 col-lg-5 col-sm-5">
-						<img  src="img/dalePlei_logo2.png"/>
-					</div>
-					<div class="col-md-1 col-lg-1 hidden-xs col-sm-1">
-						<div id="div70"></div>
-						<img src="img/store_logo1.png"/>
-					</div>
+		<header>
+			<div class="row">
+				<div class="col-md-5 col-lg-5 col-sm-5">
+					<img  src="img/dalePlei_logo2.png"/>
+				</div>
 
-				</div>				
-			</header>
+				<div class="col-md-1 col-lg-1 hidden-xs col-sm-1">
+					<div id="div70"></div>
+					<img src="img/store_logo1.png"/>
+				</div>
 
-			<nav>
-				<div class="panel panel-default"> 
+			</div>				
+		</header>
 
-					<div class="btn-group" role="group" aria-label="...">
-					  <button type="button" class="btn btn-default">Comprar videos</button>
-					    <div class="btn-group" role="group">
-							    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							      Ayuda
-							      <span class="caret"></span>
-							    </button>
-							    <ul class="dropdown-menu">
-							      <li><a href="#">Dropdown link</a></li>
-							      <li><a href="#">Dropdown link</a></li>
-							    </ul>
-							  </div>
-					  <button type="button" class="btn btn-default">Contacto</button>
-					</div>
-  				</div>
-
+		<nav>
+			<div class="panel panel-default"> 
+				<div class="container-fluid">
+					<ul class="nav navbar-nav">
+				        <li><a href="#">Comprar videos</a></li>
+				        <li class="dropdown">
+				          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ayuda <span class="caret"></span></a>
+				          <ul class="dropdown-menu">
+				            <li><a href="#">-</a></li>
+				            <li><a href="#">-</a></li>
+						  </ul>
+						</li>
+				        <li><a href="#">Contacto</a></li>
+					</ul>
+				</div>
+			</div>
 		</nav>
 
 		<footer>
-
 		</footer>
 
 	</body>
