Botón para agregar obras

--- a/panel.html
+++ b/panel.html
@@ -41,6 +41,10 @@
 			</div>
 		</nav>
 
+		<section id="obras">
+			<a class="btn btn-default" id="btn-agregar" href="#" role="button"> <span class="glyphicons glyphicon-plus gi-3x"></span> <p id="txt-agregar"> Agregar obra </p> </a>
+		</section>
+
 		<footer>
 		</footer>
 
