Centrar texto en el botón

--- a/panel.html
+++ b/panel.html
@@ -23,6 +23,10 @@
 			</div>				
 		</header>
 
+		<aside>
+
+		</aside>
+
 		<nav>
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
@@ -42,7 +46,12 @@
 		</nav>
 
 		<section id="obras">
-			<a class="btn btn-default" id="btn-agregar" href="#" role="button"> <span class="glyphicons glyphicon-plus gi-3x"></span> <p id="txt-agregar"> Agregar obra </p> </a>
+			<a class="btn btn-default" id="btn-agregar" href="#" role="button">
+				<div id="div-agregar">
+				<span class="glyphicons glyphicon-plus gi-3x"></span>
+				<p id="txt-agregar"> Agregar obra </p>
+				</div>
+			</a>
 		</section>
 
 		<footer>
