Página de ayuda
Se agrega la página de ayuda, y además también se configura el parámetro
charset en todas las páginas.

--- a/ayuda.html
+++ b/ayuda.html
@@ -46,14 +46,17 @@
 			</div>
 		</nav>
 
-		<section id="obras">
-			<a class="btn btn-default" id="btn-agregar" href="#" role="button">
-				<div id="div-agregar">
-				<span class="glyphicons glyphicon-plus gi-3x"></span>
-				<p id="txt-agregar"> Agregar obra </p>
-				</div>
-			</a>
+		<section>
+			<div class="col-md-3 col-lg-3 col-sm-1"> </div>
+			<div class="col-md-6 col-lg-6 col-sm-9">
+				<p class="text-left">¿Cómo agregar un video?</p>
+				<p class="text-justify"> Para agregar un video a la lista de obras, debe hacer click en el botón "Agregar obra" del panel de usuario. Luego debe introducir el código de la obra que desea agregar, el cual debe haber sido proporcionado previamente por Dale Plei.</p>
+				<p class="text-left">¿Cómo ver un video ya agregado?</p>
+				<p class="text-justify">En su panel de usuario se encuentran las obras que ya han sido agregadas. Debe hacer click en la obra que desea ver.</p>
+			</div>
+
 		</section>
+
 
 		<footer>
 		</footer>
