--- a/registro.html
+++ b/registro.html
@@ -2,6 +2,7 @@
 
 <html lang="es">
     <head>
+    	<meta charset="utf-8" />
 		<title>Dale Plei Store [REGISTRO]</title>
 		<link type="text/css" href="css/bootstrap.css" rel="stylesheet">		
 		<link type="text/css" href="css/center_divs.css" rel="stylesheet">		
