--- a/ayuda.html
+++ b/ayuda.html
@@ -33,13 +33,7 @@
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
 				        <li><a href="#">Comprar videos</a></li>
-				        <li class="dropdown">
-				          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ayuda <span class="caret"></span></a>
-				          <ul class="dropdown-menu">
-				            <li><a href="#">-</a></li>
-				            <li><a href="#">-</a></li>
-						  </ul>
-						</li>
+				        <li><a href="#">Ayuda</a></li>
 				        <li><a href="#">Contacto</a></li>
 					</ul>
 				</div>
