Cambios en el footer

--- a/ayuda.html
+++ b/ayuda.html
@@ -48,13 +48,18 @@
 				<p class="text-left">¿Cómo ver un video ya agregado?</p>
 				<p class="text-justify">En su panel de usuario se encuentran las obras que ya han sido agregadas. Debe hacer click en la obra que desea ver.</p>
 			</div>
-
+		
 		</section>
-
-
-		<footer>
-		</footer>
-
+	
+	
+		<footer class="footer">
+			<div class="container">
+					<div class="panel-footer">
+						<p class="text-muted">Dale Plai Store 2015</p>
+					</div>	
+			</div>
+    	</footer>
+	
 	</body>
 
 </html>
