--- a/panel.html
+++ b/panel.html
@@ -49,8 +49,12 @@
 			</a>
 		</section>
 
-		<footer>
-			
+		<footer class="footer">
+			<div class="container">
+					<div class="panel-footer">
+						<p class="text-center">Dale Plai Store 2015</p>
+					</div>	
+			</div>
 		</footer>
 
 	</body>
