--- a/ayuda.html
+++ b/ayuda.html
@@ -55,7 +55,7 @@
 		<footer class="footer">
 			<div class="container">
 					<div class="panel-footer">
-						<p class="text-muted">Dale Plai Store 2015</p>
+						<p class="text-center">Dale Plai Store 2015</p>
 					</div>	
 			</div>
     	</footer>
