--- a/panel.html
+++ b/panel.html
@@ -49,7 +49,7 @@
 			</a>
 		</section>
 
-		<footer class="footer">
+		<footer class="footer" id="footer">
 			<div class="container">
 					<div class="panel-footer">
 						<p class="text-center">Dale Plai Store 2015</p>
