Agregar panel usuario

--- a/panel.html
+++ b/panel.html
@@ -20,6 +20,15 @@
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
+				
+				<div class="col-md-2 col-lg-2 col-sm-2" id="usuario1">
+					<div id="usuario">
+						<span class="glyphicon glyphicon-user gi-4x"></span>
+							<p id="txtUsuario">Nombre Usuario</p>
+							<p><a href="#">Panel de Control</a></p>
+							<p><a href="#">[Cerrar Seción]</a></p>
+					</div>	
+				</div>
 
 			</div>				
 		</header>
