cambios en el footer

--- a/panel.html
+++ b/panel.html
@@ -60,9 +60,11 @@
 
 		<footer class="footer" id="footer">
 			<div class="container">
-					<div class="panel-footer">
-						<p class="text-center">Dale Plai Store 2015</p>
-					</div>	
+					<nav class="navbar navbar-default navbar-fixed-bottom">
+        				<div id="txtfooter" class="navbar-inner navbar-content-center">
+            				<p class="text-center credit">Dale Plai Store 2015</p>
+        				</div>
+    				</nav>	
 			</div>
 		</footer>
 
