--- a/ayuda.html
+++ b/ayuda.html
@@ -20,6 +20,7 @@
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
+				
 
 			</div>				
 		</header>
@@ -52,11 +53,13 @@
 		</section>
 	
 	
-		<footer class="footer">
+		<footer class="footer" id="footer">
 			<div class="container">
-					<div class="panel-footer">
-						<p class="text-center">Dale Plai Store 2015</p>
-					</div>	
+					<nav class="navbar navbar-default navbar-fixed-bottom">
+        				<div id="txtfooter" class="navbar-inner navbar-content-center">
+            				<p class="text-center credit">Dale Plai Store 2015</p>
+        				</div>
+    				</nav>	
 			</div>
     	</footer>
 	
