--- a/panel.html
+++ b/panel.html
@@ -26,7 +26,7 @@
 						<span class="glyphicon glyphicon-user gi-4x"></span>
 							<p id="txtUsuario">Nombre Usuario</p>
 							<p><a href="#">Panel de Control</a></p>
-							<p><a href="#">[Cerrar Seción]</a></p>
+							<p><a href="#">[Cerrar Sesión]</a></p>
 					</div>	
 				</div>
 
