--- a/registro.html
+++ b/registro.html
@@ -40,7 +40,7 @@
 								  <option>Adolescentes 3</option>
 								  <option>Adolescentes 4</option>
 								  <option>Adolescentes 5</option>
-								  <option>Niños</option>
+								  <option>Ni&ntilde;os</option>
 								<option>Adultos</option>
 								</select>
 						</div>
@@ -74,15 +74,15 @@
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="password" class="col-sm-2 control-label">Contraseña:</label>
+						<label for="password" class="col-sm-2 control-label">Contrase&ntilde;a:</label>
 						<div class="col-sm-10">
-						  <input type="password" class="form-control" id="password" name="password" placeholder="ingrese contraseï¿½a...">
+						  <input type="password" class="form-control" id="password" name="password" placeholder="ingrese contrase&ntilde;a...">
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="usuario" class="col-sm-2 control-label">Repita la contraseña:</label>
+						<label for="usuario" class="col-sm-2 control-label">Repita la contrase&ntilde;a:</label>
 						<div class="col-sm-10">
-						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contraseña...">
+						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contrase&ntilde;a...">
 						</div>
 					  </div>
 					  
