--- a/ayuda.html
+++ b/ayuda.html
@@ -44,9 +44,9 @@
 		<section>
 			<div class="col-md-3 col-lg-3 col-sm-1"> </div>
 			<div class="col-md-6 col-lg-6 col-sm-9">
-				<p class="text-left">¿Cómo agregar un video?</p>
+				<strong class="text-left">¿Cómo agregar un video?</strong>
 				<p class="text-justify"> Para agregar un video a la lista de obras, debe hacer click en el botón "Agregar obra" del panel de usuario. Luego debe introducir el código de la obra que desea agregar, el cual debe haber sido proporcionado previamente por Dale Plei.</p>
-				<p class="text-left">¿Cómo ver un video ya agregado?</p>
+				<strong class="text-left">¿Cómo ver un video ya agregado?</strong>
 				<p class="text-justify">En su panel de usuario se encuentran las obras que ya han sido agregadas. Debe hacer click en la obra que desea ver.</p>
 			</div>
 		
