--- a/panel.html
+++ b/panel.html
@@ -11,25 +11,21 @@
 	</head>
 
 	<body>
-		<header>
+		<div class="col-md-11 col-lg-11 col-sm-11">
+		<header class="col-md-12 col-lg-12">
 			<div class="row">
 				<div class="col-md-5 col-lg-5 col-sm-5">
 					<img  src="img/dalePlei_logo2.png"/>
 				</div>
 
-				<div class="col-md-1 col-lg-1 hidden-xs col-sm-1">
+				<div class="col-md-3 col-lg-3 hidden-xs col-sm-5">
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
-
 			</div>				
 		</header>
 
-		<aside>
-
-		</aside>
-
-		<nav>
+		<nav class="col-md-12 col-lg-12">
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
@@ -40,6 +36,17 @@
 				</div>
 			</div>
 		</nav>
+		</div>
+
+		<aside class="col-md-1 col-lg-1 col-sm-1">
+			<div id="recuadro">
+				<p> Nombre Usuario </p>
+				<p> Panel de control </p>
+				<small> [Cerrar sesion] </small>
+			</div>
+		</aside>
+
+
 
 		<section id="obras">
 			<a class="btn btn-default" id="btn-agregar" href="#" role="button" data-toggle="modal" data-target="#myModal">
@@ -79,7 +86,7 @@
 
 
 		<footer>
-			
+			<p> Dale Plei Store 2015 <p>
 		</footer>
 
 	</body>
