--- a/panel.html
+++ b/panel.html
@@ -11,6 +11,7 @@
 	</head>
 
 	<body>
+		<!--
 		<div class="col-md-11 col-lg-11 col-sm-11">
 		<header class="col-md-12 col-lg-12">
 			<div class="row">
@@ -22,19 +23,6 @@
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
-<<<<<<< HEAD
-=======
-				
-				<div class="col-md-2 col-lg-2 col-sm-2" id="usuario1">
-					<div id="usuario">
-						<span class="glyphicon glyphicon-user gi-4x"></span>
-							<p id="txtUsuario">Nombre Usuario</p>
-							<p><a href="#">Panel de Control</a></p>
-							<p><a href="#">[Cerrar Sesión]</a></p>
-					</div>	
-				</div>
-
->>>>>>> origin/master
 			</div>				
 		</header>
 
@@ -50,18 +38,57 @@
 			</div>
 		</nav>
 		</div>
+				<div class="col-md-1 col-lg-1 col-sm-1 text-center" id="usuario">
+					<div id="recuadro">
+						<span class="glyphicon glyphicon-user gi-4x"></span>
+							<p id="txt-usuario">Nombre Usuario</p>
+							<p><a href="#">Panel de Control</a></p>
+							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
+					</div>	
+				</div>-->
 
-		<aside class="col-md-1 col-lg-1 col-sm-1">
-			<div id="recuadro">
-				<p> Nombre Usuario </p>
-				<p> Panel de control </p>
-				<small> [Cerrar sesion] </small>
-			</div>
+		<header>
+			<div class="row">
+				<div class="col-md-5 col-lg-5 col-sm-5">
+					<img  src="img/dalePlei_logo2.png"/>
+				</div>
+
+				<div class="col-md-5 col-lg-5 hidden-xs col-sm-5">
+					<div id="div70"></div>
+					<img src="img/store_logo1.png"/>
+				</div>
+				
+				<div class="col-md-2 col-lg-2 col-sm-2 text-center" id="usuario">
+					<div id="recuadro">
+						<span class="glyphicon glyphicon-user gi-5x" id="icono-usuario"></span>
+							<p id="txt-usuario">Nombre Usuario</p>
+							<p><a href="#">Panel de Control</a></p>
+							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
+					</div>	
+				</div>
+
+			</div>				
+		</header>
+
+		<aside>
+
 		</aside>
 
+		<nav>
+			<div class="panel panel-default"> 
+				<div class="container-fluid">
+					<ul class="nav navbar-nav">
+				        <li><a href="#">Comprar videos</a></li>
+				        <li><a href="#">Ayuda</a></li>
+				        <li><a href="#">Contacto</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 
-		<section id="obras">
+
+		<section id="obras" class="col-md-12 col-lg-12 col-sm-12">
 			<a class="btn btn-default" id="btn-agregar" href="#" role="button" data-toggle="modal" data-target="#myModal">
 				<div id="div-agregar">
 				<span class="glyphicons glyphicon-plus gi-3x"></span>
@@ -98,7 +125,6 @@
 		</div>
 
 
-<<<<<<< HEAD
 		<footer class="footer" id="footer">
 			<div class="container">
 					<nav class="navbar navbar-default navbar-fixed-bottom">
@@ -107,14 +133,6 @@
         				</div>
     				</nav>	
 			</div>
-=======
-		<footer>
-<<<<<<< HEAD
-			<p> Dale Plei Store 2015 <p>
-=======
-			
->>>>>>> origin/master
->>>>>>> origin/master
 		</footer>
 
 	</body>
