--- a/ayuda.html
+++ b/ayuda.html
@@ -10,31 +10,36 @@
 	</head>
 
 	<body>
+		
 		<header>
 			<div class="row">
 				<div class="col-md-5 col-lg-5 col-sm-5">
 					<img  src="img/dalePlei_logo2.png"/>
 				</div>
 
-				<div class="col-md-1 col-lg-1 hidden-xs col-sm-1">
+				<div class="col-md-5 col-lg-5 hidden-xs col-sm-5">
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
 				
+				<div class="col-md-2 col-lg-2 col-sm-2 text-center" id="usuario">
+					<div id="recuadro">
+						<span class="glyphicon glyphicon-user gi-5x" id="icono-usuario"></span>
+							<p id="txt-usuario">Nombre Usuario</p>
+							<p><a href="panel.html">Panel de Control</a></p>
+							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
+					</div>	
+				</div>
 
 			</div>				
 		</header>
-
-		<aside>
-
-		</aside>
 
 		<nav>
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
 				        <li><a href="#">Comprar videos</a></li>
-				        <li><a href="#">Ayuda</a></li>
+				        <li><a href="ayuda.html">Ayuda</a></li>
 				        <li><a href="#">Contacto</a></li>
 					</ul>
 				</div>
@@ -44,9 +49,9 @@
 		<section>
 			<div class="col-md-3 col-lg-3 col-sm-1"> </div>
 			<div class="col-md-6 col-lg-6 col-sm-9">
-				<p class="text-left">¿Cómo agregar un video?</p>
+				<strong class="text-left">¿Cómo agregar un video?</strong>
 				<p class="text-justify"> Para agregar un video a la lista de obras, debe hacer click en el botón "Agregar obra" del panel de usuario. Luego debe introducir el código de la obra que desea agregar, el cual debe haber sido proporcionado previamente por Dale Plei.</p>
-				<p class="text-left">¿Cómo ver un video ya agregado?</p>
+				<strong class="text-left">¿Cómo ver un video ya agregado?</strong>
 				<p class="text-justify">En su panel de usuario se encuentran las obras que ya han sido agregadas. Debe hacer click en la obra que desea ver.</p>
 			</div>
 		
