--- a/panel.html
+++ b/panel.html
@@ -62,7 +62,7 @@
 					<div id="recuadro">
 						<span class="glyphicon glyphicon-user gi-5x" id="icono-usuario"></span>
 							<p id="txt-usuario">Nombre Usuario</p>
-							<p><a href="#">Panel de Control</a></p>
+							<p><a href="panel.html">Panel de Control</a></p>
 							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
 					</div>	
 				</div>
@@ -70,16 +70,12 @@
 			</div>				
 		</header>
 
-		<aside>
-
-		</aside>
-
 		<nav>
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
 				        <li><a href="#">Comprar videos</a></li>
-				        <li><a href="#">Ayuda</a></li>
+				        <li><a href="ayuda.html">Ayuda</a></li>
 				        <li><a href="#">Contacto</a></li>
 					</ul>
 				</div>
