Cambio en el Footer
Se cambia "Dale Plai" por "Dale Plei"

--- a/panel.html
+++ b/panel.html
@@ -125,7 +125,7 @@
 			<div class="container">
 					<nav class="navbar navbar-default navbar-fixed-bottom">
         				<div id="txtfooter" class="navbar-inner navbar-content-center">
-            				<p class="text-center credit">Dale Plai Store 2015</p>
+            				<p class="text-center credit">Dale Plei Store 2015</p>
         				</div>
     				</nav>	
 			</div>
