--- a/registro.html
+++ b/registro.html
@@ -68,9 +68,9 @@
 					  <br>
 					  
 					  <div class="form-group">
-						<label for="usuario" class="col-sm-2 control-label">Usuario:</label>
+						<label for="usuarioName" class="col-sm-2 control-label">Usuario:</label>
 						<div class="col-sm-10">
-						  <input type="text" class="form-control" id="usuario" name="usuario" placeholder="ingrese nombre de usuario...">
+						  <input type="text" class="form-control" id="usuarioName" name="usuarioName" placeholder="ingrese nombre de usuario...">
 						</div>
 					  </div>
 					  <div class="form-group">
@@ -80,7 +80,7 @@
 						</div>
 					  </div>
 					  <div class="form-group">
-						<label for="usuario" class="col-sm-2 control-label">Repita la contrase&ntilde;a:</label>
+						<label for="password2" class="col-sm-2 control-label">Repita la contrase&ntilde;a:</label>
 						<div class="col-sm-10">
 						  <input type="password" class="form-control" id="password2" name="password2" placeholder="repetir contrase&ntilde;a...">
 						</div>
