Más diseño para el botón y la ventana

--- a/panel.html
+++ b/panel.html
@@ -11,41 +11,7 @@
 	</head>
 
 	<body>
-		<!--
-		<div class="col-md-11 col-lg-11 col-sm-11">
-		<header class="col-md-12 col-lg-12">
-			<div class="row">
-				<div class="col-md-5 col-lg-5 col-sm-5">
-					<img  src="img/dalePlei_logo2.png"/>
-				</div>
 
-				<div class="col-md-3 col-lg-3 hidden-xs col-sm-5">
-					<div id="div70"></div>
-					<img src="img/store_logo1.png"/>
-				</div>
-			</div>				
-		</header>
-
-		<nav class="col-md-12 col-lg-12">
-			<div class="panel panel-default"> 
-				<div class="container-fluid">
-					<ul class="nav navbar-nav">
-				        <li><a href="#">Comprar videos</a></li>
-				        <li><a href="#">Ayuda</a></li>
-				        <li><a href="#">Contacto</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		</div>
-				<div class="col-md-1 col-lg-1 col-sm-1 text-center" id="usuario">
-					<div id="recuadro">
-						<span class="glyphicon glyphicon-user gi-4x"></span>
-							<p id="txt-usuario">Nombre Usuario</p>
-							<p><a href="#">Panel de Control</a></p>
-							<p><a href="#"><small>[Cerrar SesiÃ³n]</small></a></p>
-					</div>	
-				</div>-->
 
 		<header>
 			<div class="row">
@@ -85,19 +51,17 @@
 
 
 		<section id="obras" class="col-md-12 col-lg-12 col-sm-12">
-			<div class="row">
-				<a class="btn btn-default" id="btn-agregar" href="#" role="button" data-toggle="modal" data-target="#myModal">
+				<a class="btn btn-default obra" id="btn-agregar" href="#" role="button" data-toggle="modal" data-target="#myModal">
 					<div id="div-agregar">
 					<span class="glyphicons glyphicon-plus gi-3x"></span>
 					<p id="txt-agregar"> Agregar obra </p>
 					</div>
 				</a>
 				<!-- Modelo de botón de obra -->
-				<a class="btn btn-default" id="btn-obra" href="#" role="button" data-toggle="modal" data-target="#ver-obra">
+				<a class="btn btn-default obra" id="btn-obra" href="#" role="button" data-toggle="modal" data-target="#ver-obra">
 					<img  src="img/p_obras/anita.jpg" class="poster" />
 					<p id="txt-agregar"> Obra </p>
 				</a>
-			</div>
 		</section>		
 		
 		<footer class="footer" id="footer">
