Botones alineados horizontalmente
Además fue agregado el link para comprar videos.

--- a/ayuda.html
+++ b/ayuda.html
@@ -38,7 +38,7 @@
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
-				        <li><a href="#">Comprar videos</a></li>
+				        <li><a href="http://daleplei.mercadoshops.com.ar/">Comprar videos</a></li>
 				        <li><a href="ayuda.html">Ayuda</a></li>
 				        <li><a href="#">Contacto</a></li>
 					</ul>
