--- a/panel.html
+++ b/panel.html
@@ -40,7 +40,7 @@
 			<div class="panel panel-default"> 
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
-				        <li><a href="#">Comprar videos</a></li>
+				        <li><a href="http://daleplei.mercadoshops.com.ar/">Comprar videos</a></li>
 				        <li><a href="ayuda.html">Ayuda</a></li>
 				        <li><a href="#">Contacto</a></li>
 					</ul>
@@ -50,18 +50,23 @@
 
 
 
-		<section id="obras" class="col-md-12 col-lg-12 col-sm-12">
+		<section class="col-md-12 col-lg-12 col-sm-12">
+			<div class="btn-group">
+				
 				<a class="btn btn-default obra" id="btn-agregar" href="#" role="button" data-toggle="modal" data-target="#myModal">
 					<div id="div-agregar">
 					<span class="glyphicons glyphicon-plus gi-3x"></span>
 					<p id="txt-agregar"> Agregar obra </p>
 					</div>
 				</a>
+
 				<!-- Modelo de botón de obra -->
 				<a class="btn btn-default obra" id="btn-obra" href="#" role="button" data-toggle="modal" data-target="#ver-obra">
 					<img  src="img/p_obras/anita.jpg" class="poster" />
 					<p id="txt-agregar"> Obra </p>
 				</a>
+
+			</div>
 		</section>		
 		
 		<footer class="footer" id="footer">
