Diseño adaptable para el header

--- a/panel.html
+++ b/panel.html
@@ -15,16 +15,16 @@
 
 		<header>
 			<div class="row">
-				<div class="col-md-5 col-lg-5 col-sm-5">
+				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-8">
 					<img  src="img/dalePlei_logo2.png"/>
 				</div>
 
-				<div class="col-md-5 col-lg-5 hidden-xs col-sm-5">
+				<div class="col-lg-5 col-md-5 col-sm-4 hidden-xs">
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
 				
-				<div class="col-md-2 col-lg-2 col-sm-2 text-center" id="usuario">
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 text-center" id="usuario">
 					<div id="recuadro">
 						<span class="glyphicon glyphicon-user gi-5x" id="icono-usuario"></span>
 							<p id="txt-usuario">Nombre Usuario</p>
@@ -32,8 +32,7 @@
 							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
 					</div>	
 				</div>
-
-			</div>				
+			</div>
 		</header>
 
 		<nav>
@@ -47,8 +46,6 @@
 				</div>
 			</div>
 		</nav>
-
-
 
 		<section class="col-md-12 col-lg-12 col-sm-12">
 			<div class="btn-group">
