--- a/ayuda.html
+++ b/ayuda.html
@@ -13,16 +13,16 @@
 		
 		<header>
 			<div class="row">
-				<div class="col-md-5 col-lg-5 col-sm-5">
+				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-8">
 					<img  src="img/dalePlei_logo2.png"/>
 				</div>
 
-				<div class="col-md-5 col-lg-5 hidden-xs col-sm-5">
+				<div class="col-lg-5 col-md-5 col-sm-4 hidden-xs">
 					<div id="div70"></div>
 					<img src="img/store_logo1.png"/>
 				</div>
 				
-				<div class="col-md-2 col-lg-2 col-sm-2 text-center" id="usuario">
+				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 text-center" id="usuario">
 					<div id="recuadro">
 						<span class="glyphicon glyphicon-user gi-5x" id="icono-usuario"></span>
 							<p id="txt-usuario">Nombre Usuario</p>
@@ -30,8 +30,7 @@
 							<p><a href="#"><small>[Cerrar Sesión]</small></a></p>
 					</div>	
 				</div>
-
-			</div>				
+			</div>
 		</header>
 
 		<nav>
@@ -44,7 +43,7 @@
 					</ul>
 				</div>
 			</div>
-		</nav>
+		</nav>		
 
 		<section>
 			<div class="col-md-3 col-lg-3 col-sm-1"> </div>
